# bme_common_msgs

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml
doc/: adding_new_message.md  initial_prompt.txt
msg/: AutoLog.msg  GnssSolution.msg  HPPOSLLH.msg  MavModes.msg  PVT.msg  RELPOSNED.msg  UTMHP.msg
scripts/: test_publisher.py
